...
    "placeholders": {
      "beanName": {
        "type": "String"
      }
    }
  },
  "brewTemplateLoadedFromHistory": "Template loaded from history",
  "brewTemplateSubtitle": "{coffeeGrams}g -> {waterGrams}g | {duration}",
  "@brewTemplateSubtitle": {
    "placeholders": {
      "coffeeGrams": {
        "type": "String"
      },
...
  "inventoryValidationRangeTooLarge": "Range too large",
  "inventoryValidationRequired": "Required",
  "languageEnglish": "English",
  "languageSimplifiedChinese": "Simplified Chinese",
  "languageSystemDefault": "System Default",
  "navBrew": "Brew",
  "navHistory": "History",
  "navManage": "Manage",
  "onboardingParamListSubtitle": "Hide defaults or add custom parameters.",
  "onboardingParamListTitle": "Parameter list",
  "onboardingPrimaryFinish": "Finish",
  "onboardingPrimaryNext": "Next",
  "onboardingPrimaryNextMethod": "Next Method",
  "onboardingSkip": "Skip",
...
